README - 06/03/2003
-------------------


CHANGES IN Mini-XML 0.93

	- mxmlLoadFile() now correctly handles comments.
	- mxmlLoadFile() now supports the "gt" and "nbsp"
	  character entities.


CHANGES IN Mini-XML 0.92

	- mxmlSaveFile() didn't return a value on success.


CHANGES IN Mini-XML 0.91

	- mxmlWalkNext() would go into an infinite loop.


CHANGES IN Mini-XML 0.9

	- Initial public release.